--- a/public/index.css
+++ b/public/index.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 html, body{
-    width: 100%;
-    height: 100%;
+    width: 100vmax;
+    height: 100vmax;
+    overflow: hidden;
 }
 .container{
     width: 100vmax;
@@ -19,11 +20,43 @@ html, body{
 }
 .innerContainer{
     width: 30vmax;
-    min-height: 35vmax;
-    background-color: red;
-    transform: translate(35vmax, 5vmax);
+    min-height: 30vmax;
+    /* background-color: red; */
+    transform: translate(35vmax, 2vmax);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     flex-direction: column;
+}
+.searchBar{
+    width: 17vmax;
+    height: 2.5vmax;
+    outline: none;
+    border: none;
+    border-radius: .2vmax;
+    padding: .5vmax;
+    font-family: 'Roboto';
+    font-weight: 600;
+    margin-bottom: 0.2vmax;
+}
+.searchDrop{
+    width: 17vmax;
+    min-height: 2.5vmax;
+    max-height: 30vmax;
+    overflow-y: auto;
+    border-radius: .2vmax;
+    background-color: white;
+}
+.searchDrop p{
+    width: 17vmax;
+    height: 2.5vmax;
+    display: flex;
+    align-items: center;
+    padding-left: 1vmax;
+    font-family: 'Roboto';
+    font-weight: 400;
+}
+.searchDrop p:hover{
+    cursor: pointer;
+    background-color: whitesmoke;
 }
