--- a/public/index.css
+++ b/public/index.css
@@ -35,7 +35,7 @@ html, body{
 .searchBar{
     width: 20vmax;
     height: 2.5vmax;
-    transform: translate(41vmax, 7vmax);
+    /* transform: translate(41vmax, 7vmax); */
     outline: none;
     border: none;
     border-radius: .2vmax;
@@ -48,11 +48,13 @@ html, body{
     width: 20vmax;
     min-height: 2.5vmax;
     max-height: 25vmax;
-    transform: translate(41vmax, 7vmax);
+    transform: translate(0vmax, 18vmax);
     overflow-y: auto;
     overflow-x: hidden;
     border-radius: .2vmax;
     background-color: white;
+    position: absolute;
+
 }
 .searchDrop p{
     width: 20vmax;
@@ -68,20 +70,45 @@ html, body{
     background-color: rgb(218, 218, 218);
 }
 .Icon{
-    transform: translate(39vmax, 7.5vmax);
+    transform: translate(9vmax, -2.5vmax);
     /* background-color: red; */
 }
 .CloseIcon{
-    transform: translate(39vmax, 7.5vmax);
+    transform: translate(9vmax, -2.5vmax);
     cursor: pointer;
     /* background-color: red; */
 }
 .card{
-    transform: translate(41vmax, 25vmax);
-    width: 23vmax;
+    margin-left: 40px;
 }
 .time{
     font-size: 13px;
+}
+.mainContainer1{
+    width: 100%;
+    height: 40%;
+    /* background-color: rebeccapurple; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.mainContainer2::-webkit-scrollbar{
+    width: 12px;
+    background-color: rgba(58, 58, 58, 0.408);
+}
+.mainContainer2::-webkit-scrollbar-thumb{
+    background-color: #787878;
+    border-radius: 10px;
+}
+.mainContainer2{
+    width: 100%;
+    height: 55%;
+    padding-bottom: 40px;
+    padding-left: 15px;
+    overflow-y: auto;
+    box-shadow: 0px 0px 15px gray;
+    /* background-color: red; */
 }
 
 
